# open-video-summary

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/: bebe_real.json
data/raw/bebe_real/: jornal_da_band.txt  jornal_da_record.txt  jornal_nacional.txt
models/subjectivity_classifier.mdl/: config.json
notebooks/: hsmvideosumm-example.ipynb  hsmvideosumm.ipynb  video-segmenter.ipynb
open_video_summary/adapters/: llm.py
open_video_summary/classifiers/: image.py  text.py
open_video_summary/core/segmenter/: prompts.py  video_segmenter.py
open_video_summary/core/selection_criteria/: base.py  chronology.py  introduction.py  quality.py  redundancy.py  subjectivity.py
open_video_summary/core/summarizers/: __init__.py  base.py
open_video_summary/entities/: image.py  summary.py  video.py
open_video_summary/handlers/: image.py  segment.py  summary.py  video.py
open_video_summary/parsers/: video.py
open_video_summary/utils/: __init__.py  config.py  helpers.py  logger.py
open_video_summary/utils/processing/: image.py  video.py
